--- a/SokolTest.vcxproj.filters
+++ b/SokolTest.vcxproj.filters
@@ -268,6 +268,21 @@
     <ClInclude Include="Lost\Animator.h">
       <Filter>Lost</Filter>
     </ClInclude>
+    <ClInclude Include="Background.h">
+      <Filter>Game\World</Filter>
+    </ClInclude>
+    <ClInclude Include="StarBackground.h">
+      <Filter>Game\World</Filter>
+    </ClInclude>
+    <ClInclude Include="Lost\FrameBuffer.h">
+      <Filter>Lost</Filter>
+    </ClInclude>
+    <ClInclude Include="FallingHub.h">
+      <Filter>Game\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="PhaseCollider.h">
+      <Filter>Game\Entity</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Lost\Camera.cpp">
@@ -416,6 +431,21 @@
     </ClCompile>
     <ClCompile Include="Lost\Animator.cpp">
       <Filter>Lost</Filter>
+    </ClCompile>
+    <ClCompile Include="Background.cpp">
+      <Filter>Game\World</Filter>
+    </ClCompile>
+    <ClCompile Include="StarBackground.cpp">
+      <Filter>Game\World</Filter>
+    </ClCompile>
+    <ClCompile Include="Lost\FrameBuffer.cpp">
+      <Filter>Lost</Filter>
+    </ClCompile>
+    <ClCompile Include="FallingHub.cpp">
+      <Filter>Game\Entity</Filter>
+    </ClCompile>
+    <ClCompile Include="PhaseCollider.cpp">
+      <Filter>Game\Entity</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
